[gd_scene load_steps=9 format=3 uid="uid://d08dmu20xpre6"]

[ext_resource type="Script" uid="uid://chow6i5jq2nvb" path="res://scenes/death_explosion/death_explosion.gd" id="1_1d5jt"]
[ext_resource type="Texture2D" uid="uid://d1gll1vew0gww" path="res://assets/sprites/explosion1.png" id="2_2fs33"]
[ext_resource type="AudioStream" uid="uid://ddfm06etn7if8" path="res://assets/sounds/explosion.wav" id="3_wq2s8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rbn1b"]
radius = 34.0

[sub_resource type="Animation" id="Animation_wq2s8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_2fs33"]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ibu1b"]
_data = {
&"RESET": SubResource("Animation_wq2s8"),
&"explode": SubResource("Animation_2fs33")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wq2s8"]
random_pitch = 1.5
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("3_wq2s8")

[node name="DeathExplosion" type="Area2D"]
collision_mask = 14
script = ExtResource("1_1d5jt")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_2fs33")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_rbn1b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ibu1b")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_wq2s8")
volume_db = -5.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
